src/test/ui/error-codes/E0277.stderr
error[E0277]: the trait bound `[u8]: std::marker::Sized` is not satisfied in `std::path::Path`
  --> $DIR/E0277.rs:23:6
   |
23 | fn f(p: Path) { }
   |      ^ `[u8]` does not have a constant size known at compile-time
   |
   = help: within `std::path::Path`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: required because it appears within the type `std::path::Path`
   = note: all local variables must have a statically known size

error[E0277]: the trait bound `i32: Foo` is not satisfied
  --> $DIR/E0277.rs:27:5
   |
27 |     some_func(5i32);
   |     ^^^^^^^^^ the trait `Foo` is not implemented for `i32`
   |
note: required by `some_func`
  --> $DIR/E0277.rs:19:1
   |
19 | fn some_func<T: Foo>(foo: T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

